# lwcalculator

./: CMakeLists.txt  Parser.cpp  Parser.h  data.h  main.cpp  types.h
